@@ -1,1 +1,1 @@
-DIST jdns-2.0.2.tar.gz 83169 SHA256 c0448ff014c069fac1f92b3c27f8a055ed2aa8b067cc3b84660948e3052d4c5b SHA512 eec7bbb04c7f6a89a675c1c3d9f682c355e6bdd615f2c84c2a3a04d8d7d750aa1cc5618aa27d936de296bff79ac19c147313914d69f31a38666f653406c0b791 WHIRLPOOL 95a0cb942577d719cdbd581ee3aa4d09e943908c255f767623a83cc2392aa97a840f5fff963933562fab491ff74e410a336080f3beb9af42129843455d1c93bc
+DIST jdns-2.0.3.tar.gz 83474 SHA256 bc4f3d1ff9354f592c4e8504bdfc8a58c6f5a04b21369732ee855cd7b439409c SHA512 06ee1d63cb03be9d84c41093d067c32b6669da0d56500b49f4769690f882e61d11cc1fee8d5ed36eb316b6d4fd231ae69e2daae7acb830115b3648f91e98c81b WHIRLPOOL 8e7b8190c2ef97def06ee13f41a1e001167dc2c0647e30c60add9a9bbfe68335bf3a21b2e092f464e75ca7c52ac27fd0e7e464d2716369b986ee9ef875bdaa2e
