@@ -4,18 +4,20 @@
 
 EAPI=5
 
-inherit git-r3 cmake-utils multibuild
+inherit cmake-utils multibuild
 
 DESCRIPTION="JDNS is a simple DNS implementation library"
 HOMEPAGE="https://github.com/psi-im/jdns"
 
-EGIT_COMMIT="ae2e7264e8458d64932590bdde2417605946cb8a"
-EGIT_REPO_URI="https://github.com/psi-im/jdns.git"
+#EGIT_COMMIT="ae2e7264e8458d64932590bdde2417605946cb8a"
+#EGIT_REPO_URI="https://github.com/psi-im/jdns.git"
+SRC_URI="https://github.com/psi-im/jdns/archive/v${PV}.tar.gz -> ${P}.tar.gz"
 
 LICENSE="MIT"
 SLOT="0"
 KEYWORDS="~amd64 ~x86"
 IUSE="qt4 qt5 tools"
+REQUIRED_EUSE="tools? || ( qt4 qt5 )"
 
 DEPEND="
 	qt4? ( dev-qt/qtcore:4 )
@@ -34,7 +36,7 @@ src_configure() {
 		cmake-utils_src_configure
 	else
 		myconfigure() {
-			local mycmakeargs=( -DMULTI_QT=ON -DBUILD_QJDNS=ON
+			local mycmakeargs=( -DBUILD_QJDNS=ON
 				$(cmake-utils_use_build tools JDNS_TOOL) )
 
 			[[ ${MULTIBUILD_VARIANT} == qt4 ]] && mycmakeargs+=( -DQT4_BUILD=ON )
