@@ -2,6 +2,12 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*jdns-2.0.3 (04 Jul 2015)
+
+  04 Jul 2015; rion <rion4ik@gmail.com> -jdns-2.0.3_pre1.ebuild,
+  +jdns-2.0.3.ebuild:
+  version bump
+
 *jdns-2.0.3_pre1 (03 Jul 2015)
 
   03 Jul 2015; Rion <rion4ik@gmail.com> -jdns-2.0.2.ebuild,
